# rocketlaunch-bot

./: .gitignore  Cargo.toml  README.md
src/: bot.rs  config.rs  db.rs  fetch.rs  lib.rs  main.rs  types.rs
