[package]
name = "rocketlaunch-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.37", features = ["serde"] }
clap = { version = "4.5.4", features = ["derive"] }
dptree = "0.3.0"
reqwest = "0.12.3"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
serde_with = { version = "3.7.0", features = ["chrono"] }
serde_yaml = "0.9.34"
teloxide = { version = "0.12.2", features = ["sqlite-storage-rustls", "throttle", "cache-me", "trace-adaptor", "macros"] }
tokio = { version = "1.37.0", features = ["full"] }
